--- a/index0.html
+++ b/index0.html
@@ -4,6 +4,7 @@
 		<meta name = "viewport" content= "width = device-width, initial-scale = 1.0">
 		<meta name = "viewport" content = "height = device-height, initial-scale = 1.0">
 		<title> Camagru | Login </title>
+		<link href="./form/main.css" rel="stylesheet">
 	</head>
 	<body>
 	<div>
