Started with getting image to timeline, half-day

--- a/timeline.html
+++ b/timeline.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class = "TopPics">
+        <form action = "./form/timeline.php" method = "POST">
         <div id = "topdiv" class = "card border-dark mb-3 post">
             <img class = "card-img-top" src ="" alt = "">
             <aside class="list-group-item d-flex justify-content-between align-items-center">
@@ -24,6 +25,7 @@
                 placeholder="Comment here.." rows="3"></textarea>
                 <button type="button" class="btn btn-outline-primary">Send</button>
         </div>
+        </form>
     </div>
 
 </body>
