reset password done

--- a/reset.html
+++ b/reset.html
@@ -8,9 +8,8 @@
 <head>
 <body>
     <div>
-        <form class = "form" id = "reset" action = "./form/reset.php" method = "POST">
-            <input class= "input" id = "oldpass" type = " text" name = "oldpass" placeholder="New Password">
-            <input class= "input" id = "newpass" type = " text" name = "newpass" placeholder="Confirm Password">
+        <form class = "form" id = "reset" action = "./form/resentlink.php" method = "POST">
+            <input class= "input" id = "email" type = " text" name = "email" placeholder="email address" required>
             <input class = "allButs" id = "Reset" type = "submit" value = "Reset">
         </form>
     </div>        
