--- a/takeapic.html
+++ b/takeapic.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./form/main.css" rel="stylesheet">
     <title>Take picture</title>
+    <form action = 'form/logoutform.php' method = 'POST'>
+		<input class = "allButs" id = "logout" type = "Submit" value = "Logout">
+	</form>
 </head>
 <body>
     <div class = "navbar">
@@ -36,7 +39,6 @@
                 </div>
             </form>
     </div> 
-
      <script src = "takepic.js"></script>
 </body>
 </html> 
