User can select email preferences

--- a/takeapic.html
+++ b/takeapic.html
@@ -8,7 +8,8 @@
     <title>Take picture</title>
     <form action = 'form/logoutform.php' method = 'POST'>
 		<input class = "allButs" id = "logout" type = "Submit" value = "Logout">
-	</form>
+    </form>
+    <a href="http://127.0.0.1:8080/Camagru/updatepage.php">Update profile</a>
 </head>
 <body>
     <div class = "navbar">
