--- a/activated.html
+++ b/activated.html
@@ -3,7 +3,7 @@
 <head>
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <meta name = "viewport" content = "height = device-height, initial-scale = 1.0">
-    <title> Camagru | Registartion </title>
+    <title> Camagru | Registration </title>
     <link href="./form/main.css" rel="stylesheet">
 </head>
 <body>
