--- a/activated.html
+++ b/activated.html
@@ -4,7 +4,7 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <meta name = "viewport" content = "height = device-height, initial-scale = 1.0">
     <title> Camagru | Registration </title>
-    <link href="./form/main.css" rel="stylesheet">
+    <link href="./config/main.css" rel="stylesheet">
 </head>
 <body>
     <h3>Activate first</h3>
