--- a/reset.html
+++ b/reset.html
@@ -4,11 +4,11 @@
     <meta name = "viewpoint" content="width = device-width, initial-scale= 1.0 ">
     <meta name = "viewpoint" content = "height = device-height, initial-scale = 1.0">
     <title> Camagru | Resset password </title> 
-    <link href="./form/main.css" rel="stylesheet">
+    <link href="./config/main.css" rel="stylesheet">
 <head>
 <body>
     <div>
-        <form class = "form" id = "reset" action = "./form/resentlink.php" method = "POST">
+        <form class = "form" id = "reset" action = "./config/resentlink.php" method = "POST">
             <input class= "input" id = "email" type = " text" name = "email" placeholder="email address" required>
             <input class = "allButs" id = "Reset" type = "submit" value = "Reset">
         </form>
