--- a/takeapic.html
+++ b/takeapic.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./form/main.css" rel="stylesheet">
+    <link href="./config/main.css" rel="stylesheet">
     <title>Take picture</title>
-    <form action = 'form/logoutform.php' method = 'POST'>
+    <form action = 'config/logoutform.php' method = 'POST'>
 		<input class = "allButs" id = "logout" type = "Submit" value = "Logout">
     </form>
     <a href="http://127.0.0.1:8080/Camagru/updatepage.php">Update profile</a>
@@ -32,7 +32,7 @@
     </div>
     <div class = "bottom">
         <div id = "photos">
-         <form action = "./form/takepic.php" method = "POST">
+         <form action = "./config/takepic.php" method = "POST">
             <input type="hidden" name="nameoftheinput" id="idofinput">
             <div>
                     <button type="submit" name = "cancel" value = "cancel">Cancel</button>
